logs/caritang.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/caritang'...
Listing './lib/python3.5/site-packages/caritang/common'...
Listing './lib/python3.5/site-packages/caritang/core'...
Compiling './lib/python3.5/site-packages/caritang/core/archiver.py'...
***   File "./lib/python3.5/site-packages/caritang/core/archiver.py", line 85
    print "removing " + docItem.getFile() + " ...."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caritang/core/storage.py'...
***   File "./lib/python3.5/site-packages/caritang/core/storage.py", line 100
    return not False in map(lambda(storage): storage.isConnected(), self.storages)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caritang/gui'...
Compiling './lib/python3.5/site-packages/caritang/gui/caritangGui.py'...
***   File "./lib/python3.5/site-packages/caritang/gui/caritangGui.py", line 317
    except StopSignalException, sse:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
